2007-05-30  Daniel Steffen  <das@users.sourceforge.net>

	* library/bgerror.tcl:	standardize dialog option & button size
	* library/dialog.tcl:	modifications done when running on on Aqua.
	* library/msgbox.tcl:

	* library/demos/button.tcl: set button highlightbackground on Aqua.

	* generic/tkFileFilter.c (AddClause): fix warning.

	* macosx/tkMacOSXMenu.c (DrawMenuSeparator): use DrawingContext API.

	* macosx/tkMacOSXWindowEvent.c (ClearPort): clip to updateRgn.

	* macosx/tkMacOSXDebug.c:	factor out debug region flashing.
	* macosx/tkMacOSXDebug.h:
	* macosx/tkMacOSXDraw.c:
	* macosx/tkMacOSXSubwindows.c:
	* macosx/tkMacOSXWindowEvent.c:

	* macosx/tkMacOSXEvent.c:	cleanup whitespace and formatting.
	* macosx/tkMacOSXFont.c:
	* macosx/tkMacOSXRegion.c:
	* macosx/tkMacOSXSubwindows.c:
	* macosx/tkMacOSXWindowEvent.c:
	* macosx/tkMacOSXWm.c:
	* macosx/tkMacOSXXStubs.c:
	* xlib/xgc.c:

2007-05-25  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.15 TAGGED FOR RELEASE ***

	* unix/README:	Updates and typo corrections.  [Bug 1724841]

2007-05-16  Don Porter  <dgp@users.sourceforge.net>

	* tests/bind.test:	Make test suite more SCIM-tolerant [Bug 1609316]

2007-05-15  Don Porter  <dgp@users.sourceforge.net>

	* changes: updates for 8.4.15 release.

	* generic/tkGrid.c: Stop crash due to list intrep shimmer [Bug 1677608]

2007-05-09  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkFileFilter.c (AddClause): OSType endianness fixes.

	* library/palette.tcl (tk::RecolorTree): handle color options with
	empty value, fixes error due to emtpy -selectforeground (reported on
	tcl-mac by Russel E. Owen).

	* macosx/tkMacOSXWindowEvent.c:	ensure window is brought to the front
	* macosx/tkMacOSXMouseEvent.c:	at the start of a window drag (except
	* macosx/tkMacOSXInt.h:		when cmd key is down); formatting and
					whitespace fixes.

	* macosx/tkMacOSXDialog.c (Tk_GetSaveFileObjCmd): add -filetypes option
	processing.
